results/SVCOMP/conversational/log-StringConstructors04-2024_03_16_21_36_16.txt
public class StringConstructors04 {
    //@ requires arg != null;
    //@ ensures \result == true <==> arg.equals(new String({'b', 'l', 'u', 'e'}));
    public static boolean f(String arg) {
        char[] charArray = {'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'};
        String s4 = new String(charArray, 4, 4);
        return s4.equals(arg);
    }
}
/home/max/Documents/JMLGPT/tmp/StringConstructors04.java:3: error: illegal start of type
    //@ ensures \result == true <==> arg.equals(new String({'b', 'l', 'u', 'e'}));
                                                            ^
/home/max/Documents/JMLGPT/tmp/StringConstructors04.java:4: error: illegal start of expression
    public static boolean f(String arg) {
    ^
/home/max/Documents/JMLGPT/tmp/StringConstructors04.java:6: error: Method specs may not precede a variable declaration
        String s4 = new String(charArray, 4, 4);
               ^
/home/max/Documents/JMLGPT/tmp/StringConstructors04.java:7: error: illegal start of type
        return s4.equals(arg);
        ^
/home/max/Documents/JMLGPT/tmp/StringConstructors04.java:7: error: <identifier> expected
        return s4.equals(arg);
                        ^
/home/max/Documents/JMLGPT/tmp/StringConstructors04.java:7: error: <identifier> expected
        return s4.equals(arg);
                            ^
/home/max/Documents/JMLGPT/tmp/StringConstructors04.java:9: error: class, interface, enum, or record expected
}
^
7 errors

public class StringConstructors04 {
    //@ requires arg != null;
    //@ ensures \result == true <==> arg.equals(new String(new char[]{'b', 'l', 'u', 'e'}));
    public static boolean f(String arg) {
        char[] charArray = {'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'};
        String s4 = new String(charArray, 4, 4);
        return s4.equals(arg);
    }
}
/home/max/Documents/JMLGPT/tmp/StringConstructors04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result == true <==> arg.equals(new String(new char[]{'b', 'l', 'u', 'e'}));
                                                ^
1 error

public class StringConstructors04 {
    //@ requires arg != null;
    //@ ensures arg.equals(new String(new char[]{'b', 'l', 'u', 'e'})) ==> \result == true;
    public static boolean f(String arg) {
        char[] charArray = {'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'};
        String s4 = new String(charArray, 4, 4);
        return s4.equals(arg);
    }
}
/home/max/Documents/JMLGPT/tmp/StringConstructors04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures arg.equals(new String(new char[]{'b', 'l', 'u', 'e'})) ==> \result == true;
                           ^
1 error

public class StringConstructors04 {
    //@ requires arg != null;
    //@ ensures arg.equals(new String(new char[]{'b', 'l', 'u', 'e'})) ==> \result == true;
    public static boolean f(String arg) {
        char[] charArray = {'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'};
        String s4 = new String(charArray, 4, 4);
        return s4.equals(arg);
    }
}
/home/max/Documents/JMLGPT/tmp/StringConstructors04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures arg.equals(new String(new char[]{'b', 'l', 'u', 'e'})) ==> \result == true;
                           ^
1 error

public class StringConstructors04 {
    //@ requires arg != null;
    //@ ensures arg.equals(new String(new char[]{'b', 'l', 'u', 'e'})) ==> \result == true;
    public static boolean f(String arg) {
        char[] charArray = {'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'};
        String s4 = new String(charArray, 4, 4);
        return s4.equals(arg);
    }
}
/home/max/Documents/JMLGPT/tmp/StringConstructors04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures arg.equals(new String(new char[]{'b', 'l', 'u', 'e'})) ==> \result == true;
                           ^
1 error

public class StringConstructors04 {
    //@ requires arg != null;
    //@ ensures arg.equals("blue") ==> \result == true;
    public static boolean f(String arg) {
        char[] charArray = {'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'};
        String s4 = new String(charArray, 4, 4);
        return s4.equals(arg);
    }
}
